# reflexio

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.update  GEMINI.md  README.md  SELF_HOST_SUMMARY.md  UI_design.md  docker-compose.yaml  how_to_write_readme.md  new_pyproject.toml  pyproject.toml  requirements.txt  run_services.sh  stop_services.sh  supervisord.conf
.claude/: settings.json
.claude/rules/: pythonic-code.md
cursor_tools/: search_engine.py
demo/: readme.md  scenarios.py  serve_viewer.py  simulate_conversation.py  viewer.html
docs/: aws-domain-migration.md  aws-ecs-deployment-minimal.md  aws-ecs-deployment.md  aws-ecs-selfhost-deployment.md  aws-ecs-update-task-definition.md  aws-ecs-upgrade-option-a.md  aws-migrate-mkdocs-to-fumadocs.md  aws-s3-mkdocs-hosting.md  aws-ses-email-setup.md  git-worktree.md  onboarding.md  supabase-migration.md
docs/architecture_diagrams/: readme.md  server_architecture.d2  service_layer_detail.d2
notebooks/: peakmojo-test.ipynb  peakmojo.ipynb  playground.py  psedo_demo.ipynb  reflexio_cookbook-Copy1.ipynb  reflexio_cookbook.ipynb  skill.ipynb  test_reflexio_client.ipynb
reflexio/: README.md
reflexio/hooks/: check_api_hooks.py
reflexio/public_docs/: mdx-components.tsx  mkdocs.yml  (+5 more)
reflexio/reflexio_client/: MANIFEST.in  README.md  pyproject.toml
reflexio/reflexio_client/reflexio/: __init__.py  cache.py  client.py  client_utils.py
reflexio/reflexio_client/tests/: __init__.py  test_cache.py
supabase_login/: README.md  run_migrations.sh
(+357 files in other folders)
