[tool.poetry]
name = "reflexio-client"
version = "0.1.0.2"
description = "A Python client for the Reflexio API"
authors = ["Reflexio Team"]
readme = "README.md"
packages = [{include = "reflexio"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.0"
pydantic = "^2.0.0"
python-dateutil = "^2.8.0"
reflexio-commons = "0.1.0.1"
mkdocstrings = {version = ">=0.18.0", extras = ["python"]}
griffe = "0.48.0"
aiohttp = "^3.12.9"
mkdocs-with-pdf = "^0.9.3"
weasyprint = "^66.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[tool.poetry.group.local.dependencies]
reflexio-commons = {path = "../reflexio_commons", develop = true}
